kubernetes/db.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: 51.159.205.58
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 15347
